<resources>
    <string name="app_name">ConversorMoedas</string>
    <string name="informe_o_valor">Informe o valor:</string>
    <string name="cotacao_dolar">Dólar</string>
    <string name="cotacao_peso">Peso Chileno</string>
    <string name="valor_em_dolar">Dólar</string>
    <string name="valor_em_peso">Peso Chileno</string>
    <string name="calcular">Calcular</string>
    <string name="informe_um_valor">Informe um valor!</string>
    <string name="qual_a_cotacao">Qual a cotação?</string>
</resources>
